4939819: File.canWrite() returns false for the "My Documents" directory (win)

Reviewed-by: iris